# tesser

./: .cliff.toml  .gitignore  CODE_OF_CONDUCT.md  CODING_STYLE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TROUBLESHOOTING.md  convert_submodules.sh
.github/scripts/: get_release_tag.sh
.github/workflows/: ci.yml  publish-sdks.yml  release.yml
config/: default.toml
connectors/tesser-binance/: Cargo.toml  README.md
connectors/tesser-binance/src/: lib.rs  ws.rs
connectors/tesser-bybit/: Cargo.toml  README.md
connectors/tesser-bybit/src/: lib.rs  ws.rs
connectors/tesser-paper/: Cargo.toml  README.md
connectors/tesser-paper/src/: lib.rs
docs/: README.md  package.json  pnpm-lock.yaml
docs/app/: layout.tsx
docs/app/(home)/: layout.tsx
docs/content/docs/: index.mdx  meta.json  strategies.mdx
docs/content/docs/01-getting-started/: index.mdx  meta.json
docs/content/docs/02-core-concepts/: architecture.mdx  financial-concepts.mdx  market-microstructure.mdx  meta.json
docs/content/docs/03-strategy-lab/: ai-inference.mdx  execution-plugins.mdx  meta.json
docs/content/docs/04-operations/: data-engineering.mdx  live-trading.mdx  meta.json
docs/content/docs/05-reference/: cli-commands.mdx  meta.json  rfc-003-programmable-execution.mdx
docs/content/docs/06-sdk/: meta.json  python-sdk.mdx
docs/lib/: layout.shared.tsx  metadata.ts  site.ts  source.ts
patch/: release.patch
research/: README.md  pyproject.toml
research/models/: ml_linear.toml
research/scripts/: export_dummy_model.py
research/strategies/: bollinger_breakout.toml  ml_classifier.toml  orderbook_imbalance.toml  pairs_trading.toml  rsi_reversion.toml  sma_cross.toml  sma_cross_vwap.toml
scripts/: compute_publish_order.py  precommit.sh
sdk/tesser-py/: README.md  pyproject.toml
sdk/tesser-py/examples/: analysis_demo.ipynb  inspector.py
sdk/tesser-py/protos/tesser/rpc/v1/: tesser.proto
sdk/tesser-py/scripts/: codegen.py  sync_version.py
sdk/tesser-py/src/tesser/: __init__.py  client.py  conversions.py  models.py  runner.py  service.py
sdk/tesser-py/src/tesser/analysis/: __init__.py  execution.py
sdk/tesser-py/src/tesser/data/: __init__.py  loaders.py  store.py
sdk/tesser-py/src/tesser/utils/: pandas.py
sdk/tesser-py/tests/integration/: test_runner.py
sdk/tesser-py/tests/unit/: test_data_access.py  test_decimal.py  test_execution_analysis.py
tesser/: Cargo.toml  README.md
tesser-backtester/: Cargo.toml  README.md
tesser-backtester/src/: lib.rs  main.rs  reporting.rs
tesser-broker/: Cargo.toml  README.md
tesser-broker/src/: connector.rs  lib.rs  router.rs
tesser-cli/: Cargo.toml  README.md
tesser-cli/src/: alerts.rs  analyze.rs  app.rs  control.rs  data_validation.rs  lib.rs  live.rs  main.rs  state.rs  telemetry.rs
tesser-cli/src/tui/: app.rs  ui.rs
tesser-cli/tests/: backtest_stream.rs  live_run.rs  monitoring_stream.rs  resilience_recovery.rs
tesser-config/: Cargo.toml  README.md
tesser-config/src/: deserializer.rs  lib.rs
tesser-core/: Cargo.toml  README.md
tesser-core/src/: identifiers.rs  lib.rs
tesser-cortex/: Cargo.toml  README.md
tesser-cortex/benches/: inference_benchmark.rs
tesser-cortex/src/: buffer.rs  config.rs  engine.rs  lib.rs
tesser-data/: Cargo.toml  README.md
tesser-data/src/: analytics.rs  download.rs  encoding.rs  io.rs  lib.rs  parquet.rs  recorder.rs  schema.rs  transform.rs
tesser-data/src/etl/: mod.rs
tesser-events/: Cargo.toml  README.md
tesser-execution/: Cargo.toml  README.md
tesser-execution/src/: lib.rs  orchestrator.rs  repository.rs
tesser-execution/src/algorithm/: iceberg.rs  mod.rs  pegged.rs  sniper.rs  twap.rs  vwap.rs
tesser-execution/tests/: integration_test.rs
tesser-indicators/: Cargo.toml
tesser-indicators/src/: core.rs
tesser-journal/: Cargo.toml
tesser-journal/src/: lib.rs  lmdb.rs
tesser-markets/: Cargo.toml  README.md
tesser-markets/src/: lib.rs
tesser-portfolio/: Cargo.toml  README.md
tesser-portfolio/src/: lib.rs
tesser-rpc/: Cargo.toml  build.rs
tesser-rpc/proto/: tesser.proto
tesser-rpc/src/: client.rs  conversions.rs  lib.rs  strategy.rs
tesser-rpc/src/transport/: grpc.rs
tesser-rpc/tests/: chaos_resilience.rs  grpc_e2e.rs  portfolio_snapshot.rs
tesser-strategy/: Cargo.toml  README.md
tesser-strategy-macros/: Cargo.toml  README.md
tesser-strategy-macros/src/: lib.rs
tesser-strategy/src/: lib.rs
tesser-test-utils/: Cargo.toml  README.md
tesser-test-utils/src/: exchange.rs  lib.rs  rest.rs  scenario.rs  state.rs  websocket.rs
tesser/src/: lib.rs
