[workspace]
resolver = "2"
members = [
    "tesser-core",
    "tesser-broker",
    "tesser-strategy",
    "tesser-strategy-macros",
    "tesser-portfolio",
    "tesser-data",
    "tesser-execution",
    "tesser-backtester",
    "tesser-cli",
    "tesser-events",
    "connectors/tesser-bybit",
    "connectors/tesser-paper",
    "tesser-config", 
    "tesser-indicators", 
    "tesser-test-utils", 
    "tesser-markets",
    "tesser",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Tesser Contributors <dev@tesser.local>"]
repository = "https://github.com/pluveto/tesser"
description = "Tesser trading framework"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
csv = "1.3"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
hyper = { version = "0.14", features = ["http1", "tcp", "server"] }
http = "0.2"
num-traits = "0.2"
prometheus = { version = "0.13", default-features = false, features = ["process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
rust_decimal = { version = "1.35", features = ["serde", "maths"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time", "signal", "sync", "net", "fs"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tesser-core = { path = "tesser-core" }
tesser-indicators = { path = "tesser-indicators" }
uuid = { version = "1.10", features = ["v4", "serde"] }

[workspace.metadata.release]
pre-release-commit-message = "chore(release): v{{version}}"
tag-message = "chore(release): v{{version}}"
publish = false
push = false
