[workspace]
resolver = "2"
members = [
    "tesser-core",
    "tesser-broker",
    "tesser-strategy",
    "tesser-strategy-macros",
    "tesser-portfolio",
    "tesser-data",
    "tesser-execution",
    "tesser-backtester",
    "tesser-cli",
    "tesser-events",
    "connectors/tesser-bybit",
    "connectors/tesser-paper",
    "connectors/tesser-binance",
    "tesser-config", 
    "tesser-indicators", 
    "tesser-test-utils", 
    "tesser-markets",
    "tesser-rpc",
    "tesser",
    "tesser-cortex",
    "tesser-journal",
]

[workspace.package]
edition = "2021"
version = "0.7.0"
license = "MIT OR Apache-2.0"
authors = ["Tesser Contributors <dev@tesser.local>"]
repository = "https://github.com/tesserspace/tesser"
description = "Tesser trading framework"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
csv = "1.3"
futures = "0.3"
heed = { version = "0.20", default-features = false, features = ["lmdb"] }
hex = "0.4"
hmac = "0.12"
hyper = { version = "0.14", features = ["http1", "tcp", "server"] }
http = "0.2"
num-traits = "0.2"
ndarray = { version = "0.16", features = ["std"] }
prometheus = { version = "0.13", default-features = false, features = ["process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
rust_decimal = { version = "1.35", features = ["serde", "maths"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time", "signal", "sync", "net", "fs"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
arrow = { version = "57.0", features = ["prettyprint"] }
parquet = { version = "57.0", features = ["async"] }
ort = "2.0.0-rc.10"
native-tls = { version = "0.2", features = ["vendored"] }
openssl = { version = "0.10", features = ["vendored"] }
once_cell = "1.19"
governor = { version = "0.6.3", default-features = false, features = ["std", "futures"] }
nonzero_ext = "0.3"
tesser-backtester = { version = "0.7.0", path = "tesser-backtester" }
tesser-broker = { version = "0.7.0", path = "tesser-broker" }
tesser-cli = { version = "0.7.0", path = "tesser-cli" }
tesser-config = { version = "0.7.0", path = "tesser-config" }
tesser-core = { version = "0.7.0", path = "tesser-core" }
tesser-data = { version = "0.7.0", path = "tesser-data" }
tesser-events = { version = "0.7.0", path = "tesser-events" }
tesser-execution = { version = "0.7.0", path = "tesser-execution" }
tesser-indicators = { version = "0.7.0", path = "tesser-indicators" }
tesser-markets = { version = "0.7.0", path = "tesser-markets" }
tesser-portfolio = { version = "0.7.0", path = "tesser-portfolio" }
tesser-rpc = { version = "0.6.0", path = "tesser-rpc" }
tesser-strategy = { version = "0.7.0", path = "tesser-strategy" }
tesser-strategy-macros = { version = "0.7.0", path = "tesser-strategy-macros" }
tesser-test-utils = { version = "0.7.0", path = "tesser-test-utils" }
tesser = { version = "0.7.0", path = "tesser" }
tesser-bybit = { version = "0.7.0", path = "connectors/tesser-bybit" }
tesser-binance = { version = "0.7.0", path = "connectors/tesser-binance" }
tesser-paper = { version = "0.7.0", path = "connectors/tesser-paper" }
uuid = { version = "1.10", features = ["v4", "serde"] }

[workspace.metadata.release]
pre-release-commit-message = "chore(release): v{{version}}"
tag-message = "chore(release): v{{version}}"
publish = false
push = false
dependent-version = "upgrade"
