[package]
name = "tesser-backtester"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Backtesting harness that replays historical data through Tesser strategies"
readme = "README.md"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tesser-broker = { version = "0.2.1", path = "../tesser-broker" }
tesser-core = { version = "0.2.1", path = "../tesser-core" }
tesser-data = { version = "0.2.1", path = "../tesser-data" }
tesser-execution = { version = "0.2.1", path = "../tesser-execution" }
tesser-portfolio = { version = "0.2.1", path = "../tesser-portfolio" }
tesser-markets = { version = "0.2.1", path = "../tesser-markets" }
tesser-strategy = { version = "0.2.1", path = "../tesser-strategy" }
tesser-paper = { version = "0.2.1", path = "../connectors/tesser-paper" }
itertools = "0.13"
rust_decimal.workspace = true
