[package]
name = "tesser-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Broker abstraction and execution client interfaces for Tesser"
readme = "README.md"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tesser-core = { version = "0.4.1", path = "../tesser-core" }
once_cell.workspace = true
