[package]
name = "tesser-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for running and operating the Tesser framework"
readme = "README.md"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
futures.workspace = true
reqwest.workspace = true
prometheus.workspace = true
hyper.workspace = true
tracing-appender.workspace = true
csv.workspace = true
tesser-backtester = { path = "../tesser-backtester" }
tesser-config = { path = "../tesser-config" }
tesser-core = { path = "../tesser-core" }
tesser-data = { path = "../tesser-data" }
tesser-events = { path = "../tesser-events" }
tesser-execution = { path = "../tesser-execution" }
tesser-portfolio = { path = "../tesser-portfolio" }
tesser-markets = { path = "../tesser-markets" }
tesser-strategy = { path = "../tesser-strategy" }
tesser-broker = { path = "../tesser-broker" }
tesser-paper = { path = "../connectors/tesser-paper" }
tesser-bybit = { path = "../connectors/tesser-bybit" }
rust_decimal.workspace = true

[dev-dependencies]
tesser-test-utils = { path = "../tesser-test-utils" }
tempfile = "3.10"
