[package]
name = "tesser-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for running and operating the Tesser framework"
readme = "README.md"

[features]
default = ["bybit", "binance"]
bybit = ["dep:tesser-bybit"]
binance = ["dep:tesser-binance"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
futures.workspace = true
reqwest.workspace = true
prometheus.workspace = true
hyper.workspace = true
tracing-appender.workspace = true
csv.workspace = true
async-trait.workspace = true
tesser-backtester = { version = "0.7.0", path = "../tesser-backtester" }
tesser-config = { version = "0.7.0", path = "../tesser-config" }
tesser-core = { version = "0.7.0", path = "../tesser-core" }
tesser-data = { version = "0.7.0", path = "../tesser-data" }
tesser-events = { version = "0.7.0", path = "../tesser-events" }
tesser-execution = { version = "0.7.0", path = "../tesser-execution" }
tesser-portfolio = { version = "0.7.0", path = "../tesser-portfolio" }
tesser-markets = { version = "0.7.0", path = "../tesser-markets" }
tesser-strategy = { version = "0.7.0", path = "../tesser-strategy" }
tesser-broker = { version = "0.7.0", path = "../tesser-broker" }
tesser-paper = { version = "0.7.0", path = "../connectors/tesser-paper" }
tesser-journal = { version = "0.7.0", path = "../tesser-journal" }
tesser-bybit = { version = "0.7.0", path = "../connectors/tesser-bybit", optional = true }
tesser-binance = { version = "0.7.0", path = "../connectors/tesser-binance", optional = true }
rust_decimal.workspace = true
arrow.workspace = true
parquet.workspace = true
tesser-rpc = { version = "0.6.0", path = "../tesser-rpc" }
tonic = { version = "0.11", features = ["transport"] }
prost-types = "0.12"

[dev-dependencies]
tesser-test-utils = { version = "0.7.0", path = "../tesser-test-utils" }
tempfile = "3.10"
assert_cmd = "2.0"
