[package]
name = "tesser-config"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Configuration loading and typed settings for Tesser components"
readme = "README.md"

[dependencies]
anyhow.workspace = true
config.workspace = true
serde.workspace = true
toml.workspace = true
rust_decimal.workspace = true
