[package]
name = "tesser-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Core domain types and utilities for the Tesser trading framework"

[dependencies]
chrono.workspace = true
serde.workspace = true
uuid.workspace = true
rust_decimal.workspace = true
crc32fast = "1.4"
once_cell = "1.19"
parking_lot = "0.12"
