[package]
name = "tesser-data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
tesser-broker = { path = "../tesser-broker" }
tesser-core = { path = "../tesser-core" }
