[package]
name = "tesser-data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Market data ingestion and storage utilities for Tesser"
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
tesser-broker = { version = "0.2.1", path = "../tesser-broker" }
tesser-core = { version = "0.2.1", path = "../tesser-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
