[package]
name = "tesser-events"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Event definitions and lightweight event bus interfaces for Tesser"
readme = "README.md"

[dependencies]
tesser-core = { path = "../tesser-core" }
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
