[package]
name = "tesser-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Order orchestration, routing, and execution engine for Tesser"
readme = "README.md"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tesser-broker = { path = "../tesser-broker" }
tesser-bybit = { path = "../connectors/tesser-bybit" }
tesser-core = { path = "../tesser-core" }
tesser-strategy = { path = "../tesser-strategy" }
thiserror.workspace = true
uuid.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["test-util"] }
tesser-paper = { path = "../connectors/tesser-paper" }
