[package]
name = "tesser-indicators"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Technical indicators and signal helpers for Tesser strategies"
readme = "README.md"

[dependencies]
num-traits.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
tesser-core = { version = "0.2.1", path = "../tesser-core" }

[dev-dependencies]
chrono.workspace = true
