[package]
name = "tesser-journal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LMDB-backed persistence for Tesser"

[dependencies]
anyhow.workspace = true
bincode = "1.3"
byteorder = "1.5"
heed = { version = "0.22" }
serde.workspace = true
tesser-execution = { version = "0.7.0", path = "../tesser-execution" }
tesser-portfolio = { version = "0.7.0", path = "../tesser-portfolio" }
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.10"
