[package]
name = "tesser-markets"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Market metadata, symbols, and marketplace registry for Tesser"
readme = "README.md"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tesser-core = { version = "0.2.1", path = "../tesser-core" }
tesser-broker = { version = "0.2.1", path = "../tesser-broker" }
