[package]
name = "tesser-portfolio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tesser-core = { path = "../tesser-core" }

[dev-dependencies]
chrono.workspace = true
uuid.workspace = true
