[package]
name = "tesser-portfolio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tesser-core = { path = "../tesser-core" }

[dev-dependencies]
chrono.workspace = true
uuid.workspace = true
