[package]
name = "tesser-portfolio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Portfolio accounting, P&L, and risk controls for Tesser"
readme = "README.md"

[dependencies]
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tesser-core = { version = "0.2.1", path = "../tesser-core" }
tesser-markets = { version = "0.2.1", path = "../tesser-markets" }
rust_decimal.workspace = true

[dev-dependencies]
chrono.workspace = true
uuid.workspace = true
