[package]
name = "tesser-strategy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tesser-core = { path = "../tesser-core" }
once_cell = "1.19"
ctor = "0.2"
tesser-strategy-macros = { path = "../tesser-strategy-macros" }
