[package]
name = "tesser-strategy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Strategy traits, helpers, and signal definitions for Tesser"
readme = "README.md"

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tesser-core = { path = "../tesser-core" }
tesser-indicators.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
once_cell = "1.19"
ctor = "0.2"
tesser-strategy-macros = { path = "../tesser-strategy-macros" }
