[package]
name = "tesser-strategy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Strategy traits, helpers, and signal definitions for Tesser"
readme = "README.md"

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
async-trait.workspace = true
tesser-core = { version = "0.9.0", path = "../tesser-core" }
tesser-indicators = { version = "0.9.0", path = "../tesser-indicators" }
tesser-cortex = { version = "0.9.0", path = "../tesser-cortex" }
rust_decimal.workspace = true
chrono.workspace = true
once_cell = "1.19"
ctor = "0.2"
tesser-strategy-macros = { version = "0.9.0", path = "../tesser-strategy-macros" }
serde_json.workspace = true
tesser-markets = { version = "0.9.0", path = "../tesser-markets" }
uuid.workspace = true
