[package]
name = "tesser-test-utils"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Mock exchange, scenarios, and helpers for end-to-end testing Tesser"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
futures.workspace = true
hex.workspace = true
hmac.workspace = true
hyper.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tesser-core.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
