[package]
name = "tesser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Unified facade for the Tesser trading framework"
repository = "https://github.com/tesserspace/tesser"
keywords = ["trading", "framework"]
categories = ["algorithms", "finance"]
readme = "README.md"

[dependencies]
anyhow.workspace = true

tesser-core = { version = "0.2.3", path = "../tesser-core" }
tesser-config = { version = "0.2.3", path = "../tesser-config" }
tesser-cli = { version = "0.2.3", path = "../tesser-cli" }
tesser-data = { version = "0.2.3", path = "../tesser-data" }
tesser-events = { version = "0.2.3", path = "../tesser-events" }
tesser-execution = { version = "0.2.3", path = "../tesser-execution" }
tesser-portfolio = { version = "0.2.3", path = "../tesser-portfolio" }
tesser-markets = { version = "0.2.3", path = "../tesser-markets" }
tesser-strategy = { version = "0.2.3", path = "../tesser-strategy" }
tesser-strategy-macros = { version = "0.2.3", path = "../tesser-strategy-macros" }
tesser-indicators = { version = "0.2.3", path = "../tesser-indicators" }
tesser-broker = { version = "0.2.3", path = "../tesser-broker" }
tesser-backtester = { version = "0.2.3", path = "../tesser-backtester" }
tesser-paper = { version = "0.2.3", path = "../connectors/tesser-paper" }
tesser-bybit = { version = "0.2.3", path = "../connectors/tesser-bybit" }
