[package]
name = "tesser-bybit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Bybit exchange connector for the Tesser framework"
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
tokio.workspace = true
tracing.workspace = true
tesser-broker = { path = "../../tesser-broker" }
tesser-core = { path = "../../tesser-core" }
hex.workspace = true
hmac.workspace = true
sha2.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
rust_decimal.workspace = true
