[package]
name = "tesser-paper"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Paper trading connector for running Tesser without a live exchange"
readme = "README.md"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tesser-broker = { path = "../../tesser-broker" }
tesser-core = { path = "../../tesser-core" }
uuid.workspace = true
rust_decimal.workspace = true
