[package]
name = "tesser-paper"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Paper trading connector for running Tesser without a live exchange"
readme = "README.md"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
csv.workspace = true
rand = { version = "0.8", features = ["std"] }
rand_distr = "0.4"
tesser-broker = { version = "0.7.0", path = "../../tesser-broker" }
tesser-core = { version = "0.7.0", path = "../../tesser-core" }
uuid.workspace = true
rust_decimal.workspace = true
