[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tesser"
version = "0.2.3"
description = "Python SDK for Tesser Trading Engine"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Tesser Contributors", email = "dev@tesser.local" }
]
dependencies = [
  "grpcio>=1.60.0",
  "protobuf>=4.25.0",
]

[project.optional-dependencies]
data = [
  "pandas>=2.0",
  "numpy>=1.25",
]

[dependency-groups]
dev = [
  "grpcio-tools>=1.60.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "mypy>=1.8.0",
  "ruff>=0.2.0",
  "types-protobuf>=4.24.0",
  "pandas-stubs>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
src = ["src", "tests"]
exclude = [
  "src/tesser/protos/tesser_pb2.py",
  "src/tesser/protos/tesser_pb2_grpc.py",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
strict_optional = false

[[tool.mypy.overrides]]
module = [
  "tesser.protos.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "grpc",
  "grpc.*",
]
ignore_missing_imports = true
